--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,16 @@
 steps:
   - id: Build
     name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA", "."]
+    args: ["build", "-t", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA", "."]
 
   - id: Push
     name: gcr.io/cloud-builders/docker
-    args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA"]
+    args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA"]
 
   - id: Migration
     name: gcr.io/cloud-builders/docker
-    args: ["run", "-e", "DATABASE_URL=$$_DATABASE_URL", "$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA", "bundle", "exec", "rake", "ridgepole:apply"]
+    entrypoint: bash
+    args: ["-c", "run -e DATABASE_URL=$$_DATABASE_URL $_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA", "bundle", "exec", "rake", "ridgepole:apply"]
     secretEnv: ["_DATABASE_URL"]
 
   - id: Deploy
@@ -21,7 +22,7 @@ steps:
       - '--project=${PROJECT_ID}'
       - '$_SERVICE_NAME'
       - '--platform=managed'
-      - '--image=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+      - '--image=$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
       - '--labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID,$_LABELS'
       - '--region=$_DEPLOY_REGION'
       - '--quiet'
@@ -42,7 +43,7 @@ availableSecrets:
   - versionName: projects/${PROJECT_ID}/secrets/DATABASE_URL/versions/latest
     env: _DATABASE_URL
 images:
-  - "$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA"
+  - "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA"
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
