--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,4 @@ jobs:
       - run: bundle exec rspec
         env:
           RAILS_ENV: test
+          DATABASE_URL: 'mysql2://mysql/tolymer_one_test'
