--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,8 @@
 default: &default
   adapter: mysql2
+  username: root
+  password:
+  host: localhost
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
