--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ default: &default
   adapter: mysql2
   username: root
   password:
-  host: localhost
+  host: 127.0.0.1
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
