--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           bundler-cache: true
       - run: |
           bundle exec rails db:create
-          bundle exec rails ridegepole:apply
+          bundle exec rails ridgepole:apply
           bundle exec rspec
         env:
           RAILS_ENV: test
