--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           bundler-cache: true
       - name: Run Rspec
-      - run: |
+        run: |
           bundle exec rails db:create
           bundle exec rails ridgepole:apply
           bundle exec rspec
