push latest tag

--- a/cloudbuild/deploy.yml
+++ b/cloudbuild/deploy.yml
@@ -3,9 +3,13 @@ steps:
     name: gcr.io/cloud-builders/docker
     args: ["build", "-t", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA", "."]
 
-  - id: Push
+  - id: Push with commit sha tag
     name: gcr.io/cloud-builders/docker
     args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA"]
+
+  - id: Push with latest tag
+    name: gcr.io/cloud-builders/docker
+    args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:latest"]
 
   - id: Migration
     name: gcr.io/cloud-builders/docker
