Fix build setting

--- a/cloudbuild/deploy.yml
+++ b/cloudbuild/deploy.yml
@@ -1,15 +1,24 @@
 steps:
   - id: Build
     name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA", "."]
+    args:
+      - build
+      - -t
+      - $_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
+      - $_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:latest
+      - '.'
 
   - id: Push with commit sha tag
     name: gcr.io/cloud-builders/docker
-    args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA"]
+    args:
+      - push
+      - $_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA
 
   - id: Push with latest tag
     name: gcr.io/cloud-builders/docker
-    args: ["push", "$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:latest"]
+    args:
+      - push
+      - $_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:latest
 
   - id: Migration
     name: gcr.io/cloud-builders/docker
